--- a/SQLDataDictionary/SQLDataDictionary/SQLDataDictionary.rdl
+++ b/SQLDataDictionary/SQLDataDictionary/SQLDataDictionary.rdl
@@ -74,16 +74,16 @@
             <TablixBody>
               <TablixColumns>
                 <TablixColumn>
-                  <Width>1.69792in</Width>
+                  <Width>1.68975in</Width>
                 </TablixColumn>
                 <TablixColumn>
-                  <Width>1in</Width>
+                  <Width>0.99183in</Width>
                 </TablixColumn>
                 <TablixColumn>
-                  <Width>0.76042in</Width>
+                  <Width>0.75225in</Width>
                 </TablixColumn>
                 <TablixColumn>
-                  <Width>3.60417in</Width>
+                  <Width>3.596in</Width>
                 </TablixColumn>
               </TablixColumns>
               <TablixRows>
@@ -117,7 +117,7 @@
                               <Color>LightGrey</Color>
                               <Style>Solid</Style>
                             </Border>
-                            <BackgroundColor>#0d47a1</BackgroundColor>
+                            <BackgroundColor>#e65100</BackgroundColor>
                             <PaddingLeft>2pt</PaddingLeft>
                             <PaddingRight>2pt</PaddingRight>
                             <PaddingTop>2pt</PaddingTop>
@@ -154,7 +154,7 @@
                               <Color>LightGrey</Color>
                               <Style>Solid</Style>
                             </Border>
-                            <BackgroundColor>#0d47a1</BackgroundColor>
+                            <BackgroundColor>#e65100</BackgroundColor>
                             <PaddingLeft>2pt</PaddingLeft>
                             <PaddingRight>2pt</PaddingRight>
                             <PaddingTop>2pt</PaddingTop>
@@ -191,7 +191,7 @@
                               <Color>LightGrey</Color>
                               <Style>Solid</Style>
                             </Border>
-                            <BackgroundColor>#0d47a1</BackgroundColor>
+                            <BackgroundColor>#e65100</BackgroundColor>
                             <PaddingLeft>2pt</PaddingLeft>
                             <PaddingRight>2pt</PaddingRight>
                             <PaddingTop>2pt</PaddingTop>
@@ -228,7 +228,7 @@
                               <Color>LightGrey</Color>
                               <Style>Solid</Style>
                             </Border>
-                            <BackgroundColor>#0d47a1</BackgroundColor>
+                            <BackgroundColor>#e65100</BackgroundColor>
                             <PaddingLeft>2pt</PaddingLeft>
                             <PaddingRight>2pt</PaddingRight>
                             <PaddingTop>2pt</PaddingTop>
@@ -256,6 +256,12 @@
                                     <FontFamily>Arial</FontFamily>
                                   </Style>
                                 </TextRun>
+                                <TextRun>
+                                  <Value>Lig</Value>
+                                  <Style>
+                                    <FontFamily>Arial</FontFamily>
+                                  </Style>
+                                </TextRun>
                               </TextRuns>
                               <Style />
                             </Paragraph>
@@ -266,7 +272,10 @@
                               <Color>LightGrey</Color>
                               <Style>Solid</Style>
                             </Border>
-                            <BackgroundColor>#29b6f6</BackgroundColor>
+                            <BottomBorder>
+                              <Color>Black</Color>
+                            </BottomBorder>
+                            <BackgroundColor>#ffb300</BackgroundColor>
                             <VerticalAlign>Middle</VerticalAlign>
                             <PaddingLeft>2pt</PaddingLeft>
                             <PaddingRight>2pt</PaddingRight>
@@ -307,7 +316,7 @@
                               <Color>LightGrey</Color>
                               <Style>Solid</Style>
                             </Border>
-                            <BackgroundColor>=IIF(Fields!Column_Id.Value Mod 2 = 1, "#e3f2fd", "#90caf9")</BackgroundColor>
+                            <BackgroundColor>=IIF(Fields!Column_Id.Value Mod 2 = 1, "#ffe0b2", "#ffb74d")</BackgroundColor>
                             <PaddingLeft>2pt</PaddingLeft>
                             <PaddingRight>2pt</PaddingRight>
                             <PaddingTop>2pt</PaddingTop>
@@ -340,7 +349,7 @@
                               <Color>LightGrey</Color>
                               <Style>Solid</Style>
                             </Border>
-                            <BackgroundColor>=IIF(Fields!Column_Id.Value Mod 2 = 1, "#e3f2fd", "#90caf9")</BackgroundColor>
+                            <BackgroundColor>=IIF(Fields!Column_Id.Value Mod 2 = 1, "#ffe0b2", "#ffb74d")</BackgroundColor>
                             <PaddingLeft>2pt</PaddingLeft>
                             <PaddingRight>2pt</PaddingRight>
                             <PaddingTop>2pt</PaddingTop>
@@ -375,7 +384,7 @@
                               <Color>LightGrey</Color>
                               <Style>Solid</Style>
                             </Border>
-                            <BackgroundColor>=IIF(Fields!Column_Id.Value Mod 2 = 1, "#e3f2fd", "#90caf9")</BackgroundColor>
+                            <BackgroundColor>=IIF(Fields!Column_Id.Value Mod 2 = 1, "#ffe0b2", "#ffb74d")</BackgroundColor>
                             <PaddingLeft>2pt</PaddingLeft>
                             <PaddingRight>2pt</PaddingRight>
                             <PaddingTop>2pt</PaddingTop>
@@ -408,7 +417,7 @@
                               <Color>LightGrey</Color>
                               <Style>Solid</Style>
                             </Border>
-                            <BackgroundColor>=IIF(Fields!Column_Id.Value Mod 2 = 1, "#e3f2fd", "#90caf9")</BackgroundColor>
+                            <BackgroundColor>=IIF(Fields!Column_Id.Value Mod 2 = 1, "#ffe0b2", "#ffb74d")</BackgroundColor>
                             <PaddingLeft>2pt</PaddingLeft>
                             <PaddingRight>2pt</PaddingRight>
                             <PaddingTop>2pt</PaddingTop>
@@ -433,7 +442,7 @@
               <TablixMembers>
                 <TablixMember>
                   <TablixHeader>
-                    <Size>1.66667in</Size>
+                    <Size>1.6585in</Size>
                     <CellContents>
                       <Textbox Name="Textbox22">
                         <CanGrow>true</CanGrow>
@@ -461,7 +470,7 @@
                             <Color>LightGrey</Color>
                             <Style>Solid</Style>
                           </Border>
-                          <BackgroundColor>#0d47a1</BackgroundColor>
+                          <BackgroundColor>#e65100</BackgroundColor>
                           <PaddingLeft>2pt</PaddingLeft>
                           <PaddingRight>2pt</PaddingRight>
                           <PaddingTop>2pt</PaddingTop>
@@ -505,7 +514,7 @@
                         </SortExpression>
                       </SortExpressions>
                       <TablixHeader>
-                        <Size>1.66667in</Size>
+                        <Size>1.6585in</Size>
                         <CellContents>
                           <Textbox Name="Table_Name1">
                             <CanGrow>true</CanGrow>
@@ -517,7 +526,6 @@
                                     <Value>=Fields!Table_Name.Value</Value>
                                     <Style>
                                       <FontFamily>Arial</FontFamily>
-                                      <Color>White</Color>
                                     </Style>
                                   </TextRun>
                                 </TextRuns>
@@ -532,7 +540,10 @@
                                 <Color>LightGrey</Color>
                                 <Style>Solid</Style>
                               </Border>
-                              <BackgroundColor>#1976d2</BackgroundColor>
+                              <RightBorder>
+                                <Color>Black</Color>
+                              </RightBorder>
+                              <BackgroundColor>#ffb300</BackgroundColor>
                               <PaddingLeft>2pt</PaddingLeft>
                               <PaddingRight>2pt</PaddingRight>
                               <PaddingTop>2pt</PaddingTop>
@@ -559,9 +570,9 @@
             <FixedColumnHeaders>true</FixedColumnHeaders>
             <FixedRowHeaders>true</FixedRowHeaders>
             <DataSetName>DataDictionaryDataSet</DataSetName>
-            <Top>0.01389in</Top>
+            <Top>0.00139in</Top>
             <Height>0.92708in</Height>
-            <Width>8.72918in</Width>
+            <Width>8.68833in</Width>
             <Style>
               <Border>
                 <Style>None</Style>
@@ -569,14 +580,14 @@
             </Style>
           </Tablix>
         </ReportItems>
-        <Height>0.94097in</Height>
+        <Height>0.95347in</Height>
         <Style>
           <Border>
             <Style>None</Style>
           </Border>
         </Style>
       </Body>
-      <Width>8.72918in</Width>
+      <Width>8.68833in</Width>
       <Page>
         <PageHeader>
           <Height>1in</Height>
@@ -590,26 +601,44 @@
                 <Paragraph>
                   <TextRuns>
                     <TextRun>
-                      <Value>SQL Server Data Dictionary</Value>
+                      <Value>SQL Server </Value>
                       <Style>
-                        <FontSize>20pt</FontSize>
+                        <FontFamily>Verdana</FontFamily>
+                        <FontSize>18pt</FontSize>
+                        <FontWeight>Bold</FontWeight>
+                        <Color>White</Color>
                       </Style>
                     </TextRun>
                   </TextRuns>
                   <Style>
-                    <TextAlign>Right</TextAlign>
+                    <TextAlign>Left</TextAlign>
+                  </Style>
+                </Paragraph>
+                <Paragraph>
+                  <TextRuns>
+                    <TextRun>
+                      <Value>Data Dictionary</Value>
+                      <Style>
+                        <FontFamily>Verdana</FontFamily>
+                        <FontSize>18pt</FontSize>
+                        <FontWeight>Bold</FontWeight>
+                        <Color>White</Color>
+                      </Style>
+                    </TextRun>
+                  </TextRuns>
+                  <Style>
+                    <TextAlign>Left</TextAlign>
                   </Style>
                 </Paragraph>
               </Paragraphs>
               <rd:DefaultName>Textbox3</rd:DefaultName>
-              <Top>0.56597in</Top>
-              <Left>5.105in</Left>
-              <Height>0.40625in</Height>
-              <Width>3.58333in</Width>
+              <Height>0.72917in</Height>
+              <Width>2.395in</Width>
               <Style>
                 <Border>
                   <Style>None</Style>
                 </Border>
+                <BackgroundColor>Black</BackgroundColor>
                 <PaddingLeft>2pt</PaddingLeft>
                 <PaddingRight>2pt</PaddingRight>
                 <PaddingTop>2pt</PaddingTop>
@@ -625,7 +654,9 @@
                     <TextRun>
                       <Value>=First(Fields!Current_Database.Value, "CurrentDatabaseNameDataSet")</Value>
                       <Style>
+                        <FontFamily>Verdana</FontFamily>
                         <FontSize>22pt</FontSize>
+                        <FontWeight>Bold</FontWeight>
                       </Style>
                     </TextRun>
                   </TextRuns>
@@ -635,15 +666,15 @@
                 </Paragraph>
               </Paragraphs>
               <rd:DefaultName>Textbox4</rd:DefaultName>
-              <Top>0.56597in</Top>
-              <Left>0.03in</Left>
-              <Height>0.37653in</Height>
-              <Width>3.84375in</Width>
+              <Left>2.40889in</Left>
+              <Height>0.72917in</Height>
+              <Width>6.27944in</Width>
               <ZIndex>1</ZIndex>
               <Style>
                 <Border>
                   <Style>None</Style>
                 </Border>
+                <BackgroundColor>#ffab00</BackgroundColor>
                 <PaddingLeft>2pt</PaddingLeft>
                 <PaddingRight>2pt</PaddingRight>
                 <PaddingTop>2pt</PaddingTop>
@@ -658,7 +689,7 @@
           </Style>
         </PageHeader>
         <PageFooter>
-          <Height>0.58333in</Height>
+          <Height>0.65208in</Height>
           <PrintOnFirstPage>true</PrintOnFirstPage>
           <PrintOnLastPage>true</PrintOnLastPage>
           <ReportItems>
@@ -677,8 +708,8 @@
                 </Paragraph>
               </Paragraphs>
               <rd:DefaultName>Textbox1</rd:DefaultName>
-              <Top>0.175in</Top>
-              <Left>7.60292in</Left>
+              <Top>0.26458in</Top>
+              <Left>7.43625in</Left>
               <Height>0.25in</Height>
               <Width>1.12626in</Width>
               <Style>
@@ -708,7 +739,8 @@
                 </Paragraph>
               </Paragraphs>
               <rd:DefaultName>Textbox2</rd:DefaultName>
-              <Top>0.13889in</Top>
+              <Top>0.25069in</Top>
+              <Left>0.03in</Left>
               <Height>0.25in</Height>
               <Width>3.13667in</Width>
               <ZIndex>1</ZIndex>
@@ -722,16 +754,23 @@
                 <PaddingBottom>2pt</PaddingBottom>
               </Style>
             </Textbox>
+            <Line Name="Line1">
+              <Top>0.18903in</Top>
+              <Left>0.03in</Left>
+              <Height>0in</Height>
+              <Width>8.65833in</Width>
+              <ZIndex>2</ZIndex>
+              <Style>
+                <Border>
+                  <Style>Solid</Style>
+                </Border>
+              </Style>
+            </Line>
           </ReportItems>
           <Style>
             <Border>
               <Style>None</Style>
             </Border>
-            <TopBorder>
-              <Color>Black</Color>
-              <Style>Solid</Style>
-              <Width>1pt</Width>
-            </TopBorder>
           </Style>
         </PageFooter>
         <PageHeight>8.5in</PageHeight>
